--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta charset="utf-8">
+<link rel="apple-touch-icon" sizes="180x180" href="https://hyphenc.github.io/mradio/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hyphenc.github.io/mradio/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://hyphenc.github.io/mradio/icons/favicon-16x16.png">
+<link rel="manifest" href="https://hyphenc.github.io/mradio/icons/site.webmanifest">
+<link rel="mask-icon" href="https://hyphenc.github.io/mradio/icons/safari-pinned-tab.svg" color="#444444">
+<link rel="shortcut icon" href="https://hyphenc.github.io/mradio/icons/favicon.ico">
+<meta name="apple-mobile-web-app-title" content="mradio">
+<meta name="application-name" content="mradio">
+<meta name="msapplication-TileColor" content="#444444">
+<meta name="msapplication-config" content="https://hyphenc.github.io/mradio/icons/browserconfig.xml">
+<meta name="theme-color" content="#444444">
 <title>mradio</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
